fix result overflow

--- a/src/style.sass
+++ b/src/style.sass
@@ -76,11 +76,11 @@ body
   flex: 1
   display: flex
   flex-direction: column
-  align-items: stretch
   font-size: $text-middle
   color: $color-fg
 
 #header
+  align-self: stretch
   display: flex
   flex-direction: column
   align-items: stretch
@@ -181,14 +181,13 @@ body
 
 #content
   flex: 1
+  align-self: center
+  max-width: 100%
   box-sizing: border-box
   @media #{$desktop}
     padding: 50px
   @media #{$mobile}
     padding: 50px 30px
-  display: flex
-  flex-direction: column
-  align-items: center
   overflow-x: auto
 
 #github
